# text-to-speech-webui

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.gpu.yml  docker-compose.yml
app/backend/: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
app/backend/app/: main.py
app/backend/app/adapters/audio/: ffmpeg.py
app/backend/app/adapters/storage/: __init__.py  filesystem.py
app/backend/app/adapters/tts/: base.py  demo.py  kokoro.py  qwen.py
app/backend/app/api/: routes.py  schemas.py
app/backend/app/core/: bootstrap.py  config.py  dependencies.py  logging.py
app/backend/app/domain/: __init__.py  errors.py  models.py
app/backend/app/services/: jobs.py  models.py  voices.py
app/backend/app/tests/: test_api.py
app/backend/tts_webui_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
app/frontend/src/: App.jsx  api.js  styles.css
deploy/compose/: docker-compose.yml
scripts/: download_kokoro.sh  download_qwen.sh  preload_models.py  prepare_runtime.sh
