[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-webui-backend"
version = "0.1.0"
description = "Local-first text-to-speech web application backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
